<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.abhishek.ocassionkeys.LoginActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            >


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginBottom="55dp"
                android:layout_marginTop="18dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo1" />


            <TextView
                android:id="@+id/admintitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:paddingLeft="98dp"
                android:text="Admin"
                android:textColor="#FAF5F5"
                android:textSize="45sp" />

            <ImageView
                android:id="@+id/ivSignIn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="Sign in text on registration activity"
                app:srcCompat="@drawable/sign_in" />


          <!--  <EditText
                android:id="@+id/atvEmailLog"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/emailReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />-->

            <EditText
                android:id="@+id/atvphone"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:maxLength="10"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="Phone"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/atvPass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/passwordReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray" />


            <TextView
                android:id="@+id/tvadmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/adminlogin"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/tvuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:paddingLeft="0dp"
                android:text="I'm an User"
                android:textColor="@color/gray" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsignin_gradient"
                    android:text="@string/sign_inLog"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnSignIn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsignin_gradient"
                    android:text="@string/sign_inLog"
                    android:textColor="#FFFFFF" />


            </RelativeLayout>



            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="10dp"
                android:contentDescription="Social site button"
                app:srcCompat="@drawable/btn_twitter" />


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signup_redirect"
                android:textColor="@color/gray" />


        </LinearLayout>



    </ScrollView>

</RelativeLayout>